--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build": "tsc -p . && terser -c -m --toplevel -o index.min.js index.js && node build-iife.js"
   },
   "devDependencies": {
-    "terser": "^5.3.0",
-    "typescript": "^4.0.2"
+    "terser": "5.3.2",
+    "typescript": "^4.0.3"
   }
 }
