--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "index.iife.min.js",
     "index.min.js"
   ],
+  "type": "module",
   "main": "index.js",
   "jsdelivr": "index.iife.min.js",
   "unpkg": "index.iife.min.js",
@@ -29,9 +30,12 @@
     "arrowParens": "avoid"
   },
   "scripts": {
-    "build": "tsc -p . && terser -c -m --toplevel -o index.min.js index.js && node build-iife.js"
+    "build": "tsc -p . && terser -c -m --toplevel -o index.min.js index.js && node build-iife.js && npm t",
+    "test": "node test.js"
   },
   "devDependencies": {
+    "jsdom": "^16.4.0",
+    "paper": "^0.12.11",
     "terser": "5.3.2",
     "typescript": "^4.0.3"
   }
