--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "index.min.js"
   ],
   "type": "module",
-  "main": "index.js",
+  "main": "index.min.js",
   "jsdelivr": "index.iife.min.js",
   "unpkg": "index.iife.min.js",
   "keywords": [
@@ -30,13 +30,13 @@
     "arrowParens": "avoid"
   },
   "scripts": {
-    "build": "tsc -p . && terser -c -m --toplevel -o index.min.js index.js && node build-iife.js && npm t",
+    "build": "tsc -p . && terser -c -m --module --mangle-props regex=/^_/ -o index.min.js index.js && node build-iife.js && npm t",
     "test": "node test.js"
   },
   "devDependencies": {
     "jsdom": "^16.4.0",
     "paper": "^0.12.11",
-    "terser": "5.3.2",
-    "typescript": "^4.0.3"
+    "terser": "^5.3.8",
+    "typescript": "^4.0.5"
   }
 }
