--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "test": "node test.js"
   },
   "devDependencies": {
-    "jsdom": "^17.0.0",
+    "jsdom": "^18.1.1",
     "paper": "^0.12.15",
-    "terser": "^5.7.2",
-    "typescript": "^4.4.2"
+    "prettier": "^2.5.0",
+    "terser": "^5.10.0",
+    "typescript": "^4.5.2"
   }
 }
